kubernetes/infrastructure/controllers/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - argo.rosenvall.se
    - argocd.rosenvall.se
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
